// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigator counts the amount of deprecated items a groupMarker has 1`] = `
Array [
  Object {
    "childUIDs": Array [
      551503844,
      -97593391,
    ],
    "deprecatedChildrenCount": 2,
    "depth": 0,
    "index": 0,
    "parent": <root>,
    "siblingsCount": 3,
    "title": "Group Marker",
    "type": "groupMarker",
    "uid": -196255993,
  },
  Object {
    "childUIDs": Array [
      -361407047,
      1438225895,
      1439149417,
      1440072939,
    ],
    "deprecated": true,
    "depth": 0,
    "groupMarkerUID": -196255993,
    "index": 1,
    "parent": <root>,
    "path": "/foo/child0",
    "siblingsCount": 3,
    "title": "Child0",
    "type": "article",
    "uid": 551503844,
  },
  Object {
    "childUIDs": Array [
      1438225895,
      1439149417,
      1440072939,
    ],
    "deprecatedChildrenCount": 1,
    "depth": 1,
    "index": 0,
    "parent": 551503844,
    "siblingsCount": 4,
    "title": "Group Marker, Child 0",
    "type": "groupMarker",
    "uid": -361407047,
  },
  Object {
    "childUIDs": Array [],
    "deprecated": true,
    "depth": 1,
    "groupMarkerUID": -361407047,
    "index": 1,
    "parent": 551503844,
    "path": "/foo/child0/grandchild0",
    "siblingsCount": 4,
    "title": "Child0_GrandChild0",
    "type": "tutorial",
    "uid": 1438225895,
  },
  Object {
    "childUIDs": Array [
      305326087,
    ],
    "depth": 1,
    "groupMarkerUID": -361407047,
    "index": 2,
    "parent": 551503844,
    "path": "/foo/child0/grandchild1",
    "siblingsCount": 4,
    "title": "Child0_GrandChild1",
    "type": "tutorial",
    "uid": 1439149417,
  },
  Object {
    "childUIDs": Array [],
    "depth": 2,
    "index": 0,
    "parent": 1439149417,
    "path": "/foo/child0/grandchild0/greatgrandchild0",
    "siblingsCount": 1,
    "title": "Child0_GrandChild0_GreatGrandChild0",
    "type": "tutorial",
    "uid": 305326087,
  },
  Object {
    "childUIDs": Array [],
    "depth": 1,
    "groupMarkerUID": -361407047,
    "index": 3,
    "parent": 551503844,
    "path": "/foo/child0/grandchild2",
    "siblingsCount": 4,
    "title": "Child0_GrandChild2",
    "type": "tutorial",
    "uid": 1440072939,
  },
  Object {
    "childUIDs": Array [
      -827353283,
    ],
    "deprecated": true,
    "depth": 0,
    "groupMarkerUID": -196255993,
    "index": 2,
    "parent": <root>,
    "path": "/foo/child1/",
    "siblingsCount": 3,
    "title": "Child1",
    "type": "tutorial",
    "uid": -97593391,
  },
  Object {
    "childUIDs": Array [],
    "depth": 1,
    "index": 0,
    "parent": -97593391,
    "path": "/foo/child1/grandchild0",
    "siblingsCount": 1,
    "title": "Child1_GrandChild0",
    "type": "method",
    "uid": -827353283,
  },
]
`;

exports[`Navigator removes the \`beta\` flag from children, if the parent is a \`beta\` 1`] = `
Array [
  Object {
    "childUIDs": Array [
      551503844,
      -97593391,
    ],
    "deprecatedChildrenCount": 0,
    "depth": 0,
    "index": 0,
    "parent": <root>,
    "siblingsCount": 3,
    "title": "Group Marker",
    "type": "groupMarker",
    "uid": -196255993,
  },
  Object {
    "beta": true,
    "childUIDs": Array [
      -361407047,
      1438225895,
      1439149417,
      1440072939,
    ],
    "depth": 0,
    "groupMarkerUID": -196255993,
    "index": 1,
    "parent": <root>,
    "path": "/foo/child0",
    "siblingsCount": 3,
    "title": "Child0",
    "type": "article",
    "uid": 551503844,
  },
  Object {
    "childUIDs": Array [
      1438225895,
      1439149417,
      1440072939,
    ],
    "deprecatedChildrenCount": 0,
    "depth": 1,
    "index": 0,
    "parent": 551503844,
    "siblingsCount": 4,
    "title": "Group Marker, Child 0",
    "type": "groupMarker",
    "uid": -361407047,
  },
  Object {
    "beta": false,
    "childUIDs": Array [],
    "depth": 1,
    "groupMarkerUID": -361407047,
    "index": 1,
    "parent": 551503844,
    "path": "/foo/child0/grandchild0",
    "siblingsCount": 4,
    "title": "Child0_GrandChild0",
    "type": "tutorial",
    "uid": 1438225895,
  },
  Object {
    "childUIDs": Array [
      305326087,
    ],
    "depth": 1,
    "groupMarkerUID": -361407047,
    "index": 2,
    "parent": 551503844,
    "path": "/foo/child0/grandchild1",
    "siblingsCount": 4,
    "title": "Child0_GrandChild1",
    "type": "tutorial",
    "uid": 1439149417,
  },
  Object {
    "beta": false,
    "childUIDs": Array [],
    "depth": 2,
    "index": 0,
    "parent": 1439149417,
    "path": "/foo/child0/grandchild0/greatgrandchild0",
    "siblingsCount": 1,
    "title": "Child0_GrandChild0_GreatGrandChild0",
    "type": "tutorial",
    "uid": 305326087,
  },
  Object {
    "childUIDs": Array [],
    "depth": 1,
    "groupMarkerUID": -361407047,
    "index": 3,
    "parent": 551503844,
    "path": "/foo/child0/grandchild2",
    "siblingsCount": 4,
    "title": "Child0_GrandChild2",
    "type": "tutorial",
    "uid": 1440072939,
  },
  Object {
    "childUIDs": Array [
      -827353283,
    ],
    "depth": 0,
    "groupMarkerUID": -196255993,
    "index": 2,
    "parent": <root>,
    "path": "/foo/child1/",
    "siblingsCount": 3,
    "title": "Child1",
    "type": "tutorial",
    "uid": -97593391,
  },
  Object {
    "beta": true,
    "childUIDs": Array [],
    "depth": 1,
    "index": 0,
    "parent": -97593391,
    "path": "/foo/child1/grandchild0",
    "siblingsCount": 1,
    "title": "Child1_GrandChild0",
    "type": "method",
    "uid": -827353283,
  },
]
`;

exports[`Navigator removes the \`beta\` flag from children, if the technology is a \`beta\` 1`] = `
Array [
  Object {
    "childUIDs": Array [
      551503844,
      -97593391,
    ],
    "deprecatedChildrenCount": 0,
    "depth": 0,
    "index": 0,
    "parent": <root>,
    "siblingsCount": 3,
    "title": "Group Marker",
    "type": "groupMarker",
    "uid": -196255993,
  },
  Object {
    "beta": false,
    "childUIDs": Array [
      -361407047,
      1438225895,
      1439149417,
      1440072939,
    ],
    "depth": 0,
    "groupMarkerUID": -196255993,
    "index": 1,
    "parent": <root>,
    "path": "/foo/child0",
    "siblingsCount": 3,
    "title": "Child0",
    "type": "article",
    "uid": 551503844,
  },
  Object {
    "beta": false,
    "childUIDs": Array [
      1438225895,
      1439149417,
      1440072939,
    ],
    "deprecatedChildrenCount": 0,
    "depth": 1,
    "index": 0,
    "parent": 551503844,
    "siblingsCount": 4,
    "title": "Group Marker, Child 0",
    "type": "groupMarker",
    "uid": -361407047,
  },
  Object {
    "childUIDs": Array [],
    "depth": 1,
    "groupMarkerUID": -361407047,
    "index": 1,
    "parent": 551503844,
    "path": "/foo/child0/grandchild0",
    "siblingsCount": 4,
    "title": "Child0_GrandChild0",
    "type": "tutorial",
    "uid": 1438225895,
  },
  Object {
    "childUIDs": Array [
      305326087,
    ],
    "depth": 1,
    "groupMarkerUID": -361407047,
    "index": 2,
    "parent": 551503844,
    "path": "/foo/child0/grandchild1",
    "siblingsCount": 4,
    "title": "Child0_GrandChild1",
    "type": "tutorial",
    "uid": 1439149417,
  },
  Object {
    "childUIDs": Array [],
    "depth": 2,
    "index": 0,
    "parent": 1439149417,
    "path": "/foo/child0/grandchild0/greatgrandchild0",
    "siblingsCount": 1,
    "title": "Child0_GrandChild0_GreatGrandChild0",
    "type": "tutorial",
    "uid": 305326087,
  },
  Object {
    "childUIDs": Array [],
    "depth": 1,
    "groupMarkerUID": -361407047,
    "index": 3,
    "parent": 551503844,
    "path": "/foo/child0/grandchild2",
    "siblingsCount": 4,
    "title": "Child0_GrandChild2",
    "type": "tutorial",
    "uid": 1440072939,
  },
  Object {
    "childUIDs": Array [
      -827353283,
    ],
    "depth": 0,
    "groupMarkerUID": -196255993,
    "index": 2,
    "parent": <root>,
    "path": "/foo/child1/",
    "siblingsCount": 3,
    "title": "Child1",
    "type": "tutorial",
    "uid": -97593391,
  },
  Object {
    "childUIDs": Array [],
    "depth": 1,
    "index": 0,
    "parent": -97593391,
    "path": "/foo/child1/grandchild0",
    "siblingsCount": 1,
    "title": "Child1_GrandChild0",
    "type": "method",
    "uid": -827353283,
  },
]
`;
